[gd_scene load_steps=3 format=3 uid="uid://cce4r3em5m283"]

[ext_resource type="Script" path="res://src/screens/menu/menu.gd" id="1_lsxx0"]
[ext_resource type="PackedScene" uid="uid://h78og16kspcj" path="res://src/screens/teams/teams.tscn" id="2_ygfth"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lsxx0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -438.0
offset_top = -492.0
offset_right = 431.0
offset_bottom = 464.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Teams" parent="VBoxContainer" instance=ExtResource("2_ygfth")]
layout_mode = 2
size_flags_vertical = 3

[node name="AdminSection" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AdminActive" type="Label" parent="VBoxContainer/AdminSection"]
layout_mode = 2
text = "ADMIN"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Export" type="Button" parent="VBoxContainer/AdminSection"]
layout_mode = 2
text = "EXPORT"

[node name="Reset" type="Button" parent="VBoxContainer/AdminSection"]
layout_mode = 2
text = "RESET"

[node name="Homepage" type="LinkButton" parent="."]
visible = false
layout_mode = 2
anchor_left = 0.324729
anchor_top = 0.81663
anchor_right = 0.683604
anchor_bottom = 0.952074
offset_left = 0.259995
offset_top = 15.0199
offset_right = -0.260071
offset_bottom = -0.119995
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 42
text = "simondalvai.org"
uri = "https://simondalvai.org"
structured_text_bidi_override = 1
metadata/_edit_use_anchors_ = true

[node name="AdminButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
anchor_right = 0.15
anchor_bottom = 0.131
offset_right = 4.0
offset_bottom = -14.48
theme_override_font_sizes/font_size = 32
text = "ADMIN"

[node name="ResetDialog" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
title = "DELETE_TEAM"
size = Vector2i(200, 102)
dialog_text = "DELETE ALL DATA?"

[connection signal="pressed" from="VBoxContainer/AdminSection/Export" to="." method="_on_export_pressed"]
[connection signal="pressed" from="VBoxContainer/AdminSection/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="AdminButton" to="." method="_on_admin_button_pressed"]
[connection signal="confirmed" from="ResetDialog" to="." method="_on_reset_dialog_confirmed"]
